--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
     image: mysql
     networks:
       - springboot-customer
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    #command: --default-authentication-plugin=mysql_native_password
+    #restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: ayurvedaapp
